// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`orderBook.component renders 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <div
      className="title"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 title primary css-ahj2mt-MuiTypography-root"
      >
        Order Book
      </p>
    </div>
    <div
      className="spreadContainer desktop"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
      >
        Spread: 
        17.00
         (
        0.05
        %)
      </p>
    </div>
  </div>
  <div
    className="tablesContainer"
  >
    <div
      className="tablesContent"
    >
      <div
        className="tableColumn"
      >
        <div
          className="loadingOverlay"
        >
          <div
            className="container"
          >
            <span
              className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary loader css-18lrjg1-MuiCircularProgress-root"
              role="progressbar"
              style={
                Object {
                  "height": 40,
                  "width": 40,
                }
              }
            >
              <svg
                className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                  cx={44}
                  cy={44}
                  fill="none"
                  r={20.2}
                  strokeWidth={3.6}
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        className="spreadContainer mobile"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
        >
          Spread: 
          17.00
           (
          0.05
          %)
        </p>
      </div>
      <div
        className="tableColumn"
      >
        <div
          className="loadingOverlay"
        >
          <div
            className="container"
          >
            <span
              className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary loader css-18lrjg1-MuiCircularProgress-root"
              role="progressbar"
              style={
                Object {
                  "height": 40,
                  "width": 40,
                }
              }
            >
              <svg
                className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                  cx={44}
                  cy={44}
                  fill="none"
                  r={20.2}
                  strokeWidth={3.6}
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="toggleFeedContainer"
  >
    <button
      className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root primary css-sghohy-MuiButtonBase-root-MuiButton-root"
      data-testid="toggle-feed-button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      Toggle Feed
    </button>
  </div>
</div>
`;

exports[`orderBook.component renders with \`error\` connection status 1`] = `
Array [
  <div
    className="MuiSnackbar-root MuiSnackbar-anchorOriginTopCenter css-zzms1-MuiSnackbar-root"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard alert css-xilmwd-MuiPaper-root-MuiAlert-root"
      direction="down"
      role="alert"
      style={
        Object {
          "opacity": 1,
          "transform": "scale(1, 1)",
          "visibility": undefined,
        }
      }
    >
      <div
        className="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
          data-testid="ErrorOutlineIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
      </div>
      <div
        className="MuiAlert-message css-acap47-MuiAlert-message"
      >
        Ups... connection is not established. Sorry.
      </div>
      <div
        className="MuiAlert-action css-ki1hdl-MuiAlert-action"
      >
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButtonBase-root primary css-11qr2p8-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          Reconnect
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>,
  <div
    aria-hidden={true}
    className="MuiBackdrop-root backdrop css-sox5kk-MuiBackdrop-root"
    style={
      Object {
        "opacity": 1,
        "visibility": undefined,
      }
    }
  />,
  <div
    className="container"
  >
    <div
      className="header"
    >
      <div
        className="title"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 title primary css-ahj2mt-MuiTypography-root"
        >
          Order Book
        </p>
      </div>
      <div
        className="spreadContainer desktop"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
        >
          Spread: 
          17.00
           (
          0.05
          %)
        </p>
      </div>
    </div>
    <div
      className="tablesContainer"
    >
      <div
        className="tablesContent"
      >
        <div
          className="tableColumn"
        >
          <div>
            <div
              className="rowHeader"
            >
              <div
                className="cell alignRight"
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
                >
                  Total
                </p>
              </div>
              <div
                className="cell alignRight"
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
                >
                  Size
                </p>
              </div>
              <div
                className="cell alignRight"
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
                >
                  Price
                </p>
              </div>
            </div>
            <div
              className="rowData rowBid"
              style={
                Object {
                  "backgroundPositionX": "right",
                  "backgroundSize": "35.75685339690107% 100%",
                }
              }
            >
              <div
                className="cell alignRight"
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 code primary css-ahj2mt-MuiTypography-root"
                >
                  1,200
                </p>
              </div>
              <div
                className="cell alignRight"
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 code primary css-ahj2mt-MuiTypography-root"
                >
                  1,200
                </p>
              </div>
              <div
                className="cell alignRight"
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 code success css-ahj2mt-MuiTypography-root"
                >
                  34,062.50
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="spreadContainer mobile"
        >
          <p
            className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
          >
            Spread: 
            17.00
             (
            0.05
            %)
          </p>
        </div>
        <div
          className="tableColumn"
        >
          <div>
            <div
              className="rowHeader"
            >
              <div
                className="cell alignRight"
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
                >
                  Price
                </p>
              </div>
              <div
                className="cell alignRight"
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
                >
                  Size
                </p>
              </div>
              <div
                className="cell alignRight"
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 secondary css-ahj2mt-MuiTypography-root"
                >
                  Total
                </p>
              </div>
            </div>
            <div
              className="rowData rowAsk"
              style={
                Object {
                  "backgroundPositionX": "left",
                  "backgroundSize": "100% 100%",
                }
              }
            >
              <div
                className="cell alignRight"
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 code danger css-ahj2mt-MuiTypography-root"
                >
                  34,079.50
                </p>
              </div>
              <div
                className="cell alignRight"
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 code primary css-ahj2mt-MuiTypography-root"
                >
                  3,356
                </p>
              </div>
              <div
                className="cell alignRight"
                style={
                  Object {
                    "width": "33.333333333333336%",
                  }
                }
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 code primary css-ahj2mt-MuiTypography-root"
                >
                  3,356
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="toggleFeedContainer"
    >
      <button
        className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root Mui-disabled primary css-sghohy-MuiButtonBase-root-MuiButton-root"
        data-testid="toggle-feed-button"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        Toggle Feed
      </button>
    </div>
  </div>,
]
`;
